[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/HUD/Shop/ShopButtons/shop_button.gd" type="Script" id=1]
[ext_resource path="res://Assets/Themes/secondary.tres" type="Theme" id=2]
[ext_resource path="res://Scenes/Singletons/Tooltips/tooltip_node.gd" type="Script" id=3]
[ext_resource path="res://Assets/Themes/panel_green.tres" type="StyleBox" id=4]
[ext_resource path="res://Assets/Themes/main.tres" type="Theme" id=5]
[ext_resource path="res://Assets/Textures/UI/FishingMinigame/check.png" type="Texture" id=6]
[ext_resource path="res://Assets/Textures/lock.png" type="Texture" id=7]

[node name="shop_button" type="Button"]
margin_right = 92.0
margin_bottom = 92.0
rect_min_size = Vector2( 92, 92 )
theme = ExtResource( 2 )
expand_icon = true
script = ExtResource( 1 )

[node name="TooltipNode" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 3 )

[node name="mod_icon" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
expand = true
stretch_mode = 6

[node name="lock" type="TextureRect" parent="."]
anchor_left = -0.130435
anchor_top = -0.163043
anchor_right = -0.130435
anchor_bottom = -0.163043
margin_top = -1.0
margin_right = 48.0
margin_bottom = 47.0
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="."]
anchor_left = 0.499696
anchor_top = 0.782478
anchor_right = 1.16304
anchor_bottom = 1.17422
margin_left = 0.0279961
margin_top = 0.012001
margin_right = 1.0
margin_bottom = -0.0280075
theme = ExtResource( 5 )
custom_colors/font_color = Color( 1, 0.933333, 0.835294, 1 )
text = "$999"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Panel" type="Panel" parent="Label"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -4.0
margin_right = 4.0
custom_styles/panel = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="unlocked" type="Panel" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -106.0
margin_top = -104.0
margin_right = -54.0
margin_bottom = -62.0
custom_styles/panel = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="unlocked"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
texture = ExtResource( 6 )
expand = true
stretch_mode = 4

[connection signal="pressed" from="." to="." method="_on_shop_button_pressed"]
